--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,9 +49,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="编辑"
+            android:text="@string/edit"
             android:layout_centerInParent="true"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            tools:ignore="RelativeOverlap" />
 
         <TextView
             android:id="@+id/tv_edit_finish"
@@ -61,8 +62,8 @@
             android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
             android:textSize="16sp"
-            android:text="完成"/>
-
+            android:text="@string/complete"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
     <androidx.viewpager2.widget.ViewPager2
