--- a/app/src/main/res/layout/listview_search_book_item.xml
+++ b/app/src/main/res/layout/listview_search_book_item.xml
@@ -35,20 +35,31 @@
                 android:ellipsize="end"
                 android:textSize="16sp"
                 android:maxLines="1"
-
                 android:textColor="@color/black"/>
 
-<!--
-            <TextView
-                android:id="@+id/tv_book_source"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/天籁小说"
-                android:ellipsize="end"
-                android:textSize="12sp"
-                android:maxLines="1"
-                android:textColor="#999999"/>
--->
+                >
+                <TextView
+                    android:id="@+id/tv_book_source"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/book_souce"
+                    android:textSize="12sp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+                <TextView
+                    android:id="@+id/tv_book_newchapter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/newchapter"
+                    android:textSize="12sp"
+                    android:maxLines="1"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    tools:ignore="RelativeOverlap" />
+            </RelativeLayout>
             <TextView
                 android:id="@+id/tv_book_desc"
                 android:layout_width="wrap_content"
@@ -78,7 +89,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/作者"
-                android:maxLines="3"
                 android:textSize="12sp"/>
 
             <TextView
@@ -86,7 +96,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/类型"
-                android:maxLines="3"
                 android:textSize="12sp"/>
 
         </LinearLayout>
