--- a/app/src/main/res/layout/listview_search_book_item.xml
+++ b/app/src/main/res/layout/listview_search_book_item.xml
@@ -26,7 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
             <TextView
                 android:id="@+id/tv_book_name"
                 android:layout_width="wrap_content"
@@ -35,31 +38,29 @@
                 android:ellipsize="end"
                 android:textSize="16sp"
                 android:maxLines="1"
-                android:textColor="@color/black"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
+                android:textColor="@color/black"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/tv_book_source"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:id="@+id/tv_book_source"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/book_souce"
-                    android:textSize="12sp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
-                <TextView
-                    android:id="@+id/tv_book_newchapter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/newchapter"
-                    android:textSize="12sp"
-                    android:maxLines="1"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    tools:ignore="RelativeOverlap" />
+                android:text="@string/book_souce"
+                android:textSize="12sp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                tools:ignore="RelativeOverlap" />
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_book_newchapter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/newchapter"
+                android:textSize="12sp"
+                android:maxLines="1"
+                />
+
             <TextView
                 android:id="@+id/tv_book_desc"
                 android:layout_width="wrap_content"
