--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -14,13 +14,11 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/setting"
-        android:title="@string/setting"
-        app:showAsAction="never" />
-
-    <item
         android:id="@+id/more"
         android:title="@string/update"
         app:showAsAction="never" />
-
+    <item
+        android:id="@+id/setting"
+        android:title="@string/disclaimer"
+        app:showAsAction="never" />
 </menu>
