--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,10 @@
     <color name="sys_dialog_setting_word_bright">#d6d7d6</color>
     <color name="sys_common_bg">#f5f4f0</color>
     <color name="sys_breen_bg">#b5bd9a</color>
+    <!-- 透明
     <color name="sys_blue_deep_bg">#001c29</color>
+    -->
+    <color name="sys_blue_deep_bg">#000000</color>
     <color name="sys_night_bg">#393431</color>
     <color name="sys_book_type_bg">#F7F7F7</color>
 
@@ -122,21 +125,21 @@
     <!--<color name="sys_leather_eye_bg">#ceebce</color>-->
     <color name="sys_leather_word">#313031</color>
 
-
-    <color name="sys_blue_deep_word">#637079</color>
-
-
-    <color name="sys_breen_word">#313031</color>
-
-
-    <color name="sys_night_word">#94928c</color>
+    <!--
+       <color name="sys_blue_deep_word">#637079</color>
+   -->
+    <color name="sys_blue_deep_word">#ffffff</color>
+       <color name="sys_breen_word">#313031</color>
 
 
+       <color name="sys_night_word">#94928c</color>
 
-    <color name="sys_font_example_word">#9b9a9c</color>
-    <color name="sys_font_example_bg">#adaaad</color>
 
-    <color name="sys_font_using_btn">#9c9a9c</color>
-    <color name="sys_font_use_btn">#31cf4a</color>
 
-</resources>
+       <color name="sys_font_example_word">#9b9a9c</color>
+       <color name="sys_font_example_bg">#adaaad</color>
+
+       <color name="sys_font_using_btn">#9c9a9c</color>
+       <color name="sys_font_use_btn">#31cf4a</color>
+
+   </resources>
