--- a/app/src/main/res/layout/listview_chapter_content_item.xml
+++ b/app/src/main/res/layout/listview_chapter_content_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -9,8 +10,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <com.example.read.custom.MyTextView
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/nothing"
+            android:cursorVisible="false"
+            android:inputType="none"
+            android:lineSpacingMultiplier="1.5"
+            android:textColor="@color/sys_protect_eye_word"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            tools:ignore="TextViewEdits" />
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:background="@color/nothing"
+            android:cursorVisible="false"
+            android:inputType="none"
+            android:lineSpacingMultiplier="1.5"
+            android:textColor="@color/sys_protect_eye_word"
+            android:textSize="20sp"
+            tools:ignore="TextViewEdits" />
+       <!-- <com.example.read.custom.MyTextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,7 +56,7 @@
             android:inputType="none"
             android:lineSpacingMultiplier="1.5"
             android:textColor="@color/sys_protect_eye_word"
-            android:textSize="20sp" />
+            android:textSize="20sp" />-->
 
     </LinearLayout>
 
